k8s_manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: textshare-api-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: textshare-api
  template:
    metadata:
      labels:
        app: textshare-api
    spec:
      containers:
      - name: textshare-api-container
        image: mgdockerid/textshare:34b8604100734951d4e4ccf5d64b528612db8695
        ports:
        - containerPort: 8000
