k8s_manifests/postgres-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-textshare-svc
  namespace: textshare
spec:
  selector:
    app: postgres-textshare
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: textshare
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-textshare
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgres-textshare
    spec:
      containers:
        - name: postgres
          image: postgres:16.1
          ports:
            - containerPort: 5432  # PostgreSQL default port
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-textshare-pvc
