k8s_manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: textshare-api-svc
spec:
  selector:
    app: textshare-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
    - name: https
      port: 443
      protocol: TCP
      targetPort: 8000
  type: ClusterIP
